--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "async": "~0.2.9"
   },
   "devDependencies": {
-    "should": "*",
+    "chai": "*",
     "mocha": "*",
     "file-utils": "~0.1.5",
     "rimraf": "~2.2.5"
